--- a/nodejs/index.html
+++ b/nodejs/index.html
@@ -5,14 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 40px;
+            background-color: #fff;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .header h1 {
+            font-size: 24px;
+            color: #333;
+        }
+
+        .upload-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .upload-form input[type="file"] {
+            padding: 10px;
+            margin-bottom: 20px;
+        }
+
+        .upload-form button[type="submit"] {
+            padding: 10px 20px;
+        }
+
+        .image-preview {
+            text-align: center;
+            margin-top: 30px;
+        }
+
+        .image-preview img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <h1>Send image</h1>
+    <div class="container">
+        <div class="header">
+            <h1 class="display-4">Enhance Low Light Images</h1>
+        </div>
 
-    <form action="/" method="post" enctype="multipart/form-data">
-        <input type="file" name="img" accept="image/*">
-        <button type="submit">Send Image</button>
-    </form>
+        <form class="upload-form" action="/" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label for="imageInput">Select an image</label>
+                <input type="file" class="form-control-file" id="imageInput" name="img" accept="image/*">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Send Image</button>
+        </form>
 
+        <div class="image-preview">
+            <img id="preview" src="#" alt="Preview" style="display: none;">
+        </div>
+    </div>
+
+    <script>
+        const fileInput = document.getElementById('imageInput');
+        const imagePreview = document.getElementById('preview');
+
+        fileInput.addEventListener('change', function () {
+            const file = fileInput.files[0];
+            const reader = new FileReader();
+
+            reader.onload = function (e) {
+                imagePreview.src = e.target.result;
+                imagePreview.style.display = 'block';
+            }
+
+            reader.readAsDataURL(file);
+        });
+    </script>
 </body>
 </html>
+
